--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.6",
     "mongoose": "^4.5.7",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "nice-route53": "^1.0.3"
   },
   "devDependencies": {},
   "scripts": {
