--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "cors": "^2.7.1",
+    "crypto": "0.0.3",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.6",
     "mongoose": "^4.5.7",
