--- a/configuration.json
+++ b/configuration.json
@@ -1,6 +1,6 @@
 {
-  "ACCESS_KEY_ID" : "AKIAIHOAYKK7NBEOIEKA",
-  "SECRET_ACCESS_KEY" : "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",
-  "EFWHAT_ZONE_ID" : "Z1E4WBTW4XVKBE",
-  "SECRET" : "tpr,crhy"
+  "ACCESS_KEY_ID" : ENTER_ACCESS_KEY_ID,
+  "SECRET_ACCESS_KEY" : ENTER_SECRET_ACCESS_KEY,
+  "EFWHAT_ZONE_ID" : ENTER_ROUTE53_ZONE_ID,
+  "SECRET" : "SUPERSECERT"
 }
